# LibreChat

./: .env.example  .gitignore  BROWSER-TEST-REPORT.md  CLAUDE.md  DOCKER-IMPROVEMENTS.md  Dockerfile.multi  GEMINI.md  README.md  SECURITY-FIXES.md  SYSTEM-TEST-REPORT.md  browser-test.js  build-nxsgpt.sh  cookies.txt  deploy-compose.yml  deploy-to-server.sh  docker-compose.n8n.yml  docker-compose.override.yml  docker-compose.simple.yml  docker-compose.yml  docker-compose.yml.backup  docker-start-nxsgpt.sh  fix-n8n-url.sh  librechat.example.yaml  librechat.yaml  package-lock.json  package.json  production-test.sh  setup-time-tracking.sh  start-with-n8n.sh  styling.md  test-email-puppeteer.js  test-email-summarizer.js  test-n8n-config.html  test-n8n-integration.html  time-tracking-aliases.sh  work-hours-summary.md
.time-tracking/: git-time-analyzer.py  time-dashboard.py  work-session-tracker.sh
api/: package.json  typedefs.js
api/app/clients/: OpenAIClient.js
api/cache/: getLogStores.js
api/models/: Agent.js  Agent.spec.js  Share.js  index.js
api/server/: index.js
api/server/controllers/: EmailController.js
api/server/middleware/limiters/: loginLimiter.js  registerLimiter.js
api/server/routes/: auth.js  email.js  index.js  n8n.js
api/server/services/: ModelService.js  TokenService.js
api/server/utils/: crypto.js  index.js
backups/manual_test_20250623_115215/nxsGPT/: actions.metadata.json  agents.metadata.json  assistants.metadata.json  balances.metadata.json  banners.metadata.json  conversations.bson  conversations.metadata.json  conversationtags.metadata.json  files.metadata.json  keys.metadata.json  memoryentries.metadata.json  messages.bson  messages.metadata.json  pluginauths.metadata.json  presets.metadata.json  projects.bson  projects.metadata.json  promptgroups.metadata.json  prompts.metadata.json  roles.bson  roles.metadata.json  sessions.bson  sessions.metadata.json  sharedlinks.metadata.json  tokens.metadata.json  toolcalls.metadata.json  transactions.bson  transactions.metadata.json  users.bson  users.metadata.json
browser-tests/: nxsgpt-automation-test.js  results.json  simple-browser-test.js  test-report.json  test-summary.md
client/: index.html  nginx.conf  package.json  tailwind.config.cjs  vite.config.ts
client/public/: integration-test.html  n8n-integration-status.html  test-n8n-iframe.html  test-n8n-new-window.html
client/src/: style.css
client/src/components/: index.ts
client/src/data-provider/: mutations.ts
client/src/hooks/: ThemeContext.tsx  index.ts  useN8N.ts
client/src/routes/: Dashboard.tsx
imap-mcp/: .gitignore  README.md  config.yaml  pyproject.toml
imap-mcp/examples/: config.yaml.example
imap-mcp/imap_mcp/: __init__.py  imap_client.py  models.py  server.py  tools.py
imap-mcp/imap_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
n8n/: nginx.conf
n8n/demo-data/workflows/: mistral-chat-workflow.json
(+32 files in other folders)
