[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imap-mcp"
version = "0.1.0"
description = "IMAP Model Context Protocol server for interactive email processing and summarization"
authors = [
    { name = "nxsGPT Team", email = "example@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "mcp>=0.1.0",
    "imapclient>=2.2.0",
    "email-validator>=1.1.3",
    "pyyaml>=6.0",
    "python-dotenv>=0.19.0",
    "requests>=2.32.3",
    "google-auth>=2.38.0",
    "google-auth-oauthlib>=1.2.1",
    "flask>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0", 
    "pytest-asyncio>=0.19.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=0.982",
    "flake8>=5.0.0",
    "pre-commit>=2.19.0",
    "ruff>=0.11.2",
]

[project.urls]
Homepage = "https://github.com/non-dirty/imap-mcp"
Issues = "https://github.com/non-dirty/imap-mcp/issues"

[project.scripts]
imap-mcp-server = "imap_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["imap_mcp"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=imap_mcp --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true