[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imap-mcp"
version = "0.1.0"
description = "IMAP MCP Server for LibreChat email summarization"
authors = [{name = "nxsGPT Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "imaplib2>=3.6",
    "cryptography>=41.0.0",
    "email-validator>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["imap_mcp*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88